meja/tests/wrong_num_args_decl-fail.meja
type rec t('a) = A('a, 'b) : t('a, 'b)
